--- a/images/image_optim_cache.yml
+++ b/images/image_optim_cache.yml
@@ -5,3 +5,5 @@ images/banner-small.jpg: 2015-09-29 02:44:58.000000000 +08:00
 images/banner-xl.jpg: 2015-09-29 02:44:58.000000000 +08:00
 images/banner-xl2.jpg: 2015-09-29 02:44:58.000000000 +08:00
 images/banner.jpg: 2015-09-29 02:44:58.000000000 +08:00
+images/dindin.png: 2016-05-19 03:08:21.000000000 +08:00
+images/site_fb_img.png: 2016-05-19 03:10:51.000000000 +08:00
