--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -6,21 +6,21 @@
 
 - title: "Member"
   href: "/member/"
-  
+
 - title: "Project"
   href: "/project/"
-  
+
 - title: "Publication"
   href: "/publication/"
-      
+
 - title: "Recruit"
-  href: "http://tom.ky/recruit/"
-  
-- title: "External"
-  external-subcategories:
-    - subtitle: "Chih-Yu (Tomky) Wang"
-      subhref: "http://tom.ky"
-    - subtitle: "CITI"
-      subhref: "https://citi.sinica.edu.tw/"
-    - subtitle: "Academia Sinica"
-      subhref: "https://www.sinica.edu.tw"
+  href: "/recruit/"
+
+#- title: "External"
+#  external-subcategories:
+#    - subtitle: "Chih-Yu (Tomky) Wang"
+#      subhref: "http://tom.ky"
+#    - subtitle: "CITI"
+#      subhref: "https://citi.sinica.edu.tw/"
+#    - subtitle: "Academia Sinica"
+#      subhref: "https://www.sinica.edu.tw"
