fix social links

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,5 +1,5 @@
 - title: "feed"
-  href: "https://snlab.github.io/atom.xml"
+  href: "https://snaclab.citi.sinica.edu.tw/atom.xml"
 
 - title: "github"
-  href: "https://github.com/snlab/"
+  href: "https://github.com/snaclab/"
