--- a/images/image_optim_cache.yml
+++ b/images/image_optim_cache.yml
@@ -1,9 +1,14 @@
 ---
-images/banner-large.jpg: 2015-09-29 02:44:58.000000000 +08:00
-images/banner-med.jpg: 2015-09-29 02:44:58.000000000 +08:00
-images/banner-small.jpg: 2015-09-29 02:44:58.000000000 +08:00
-images/banner-xl.jpg: 2015-09-29 02:44:58.000000000 +08:00
-images/banner-xl2.jpg: 2015-09-29 02:44:58.000000000 +08:00
-images/banner.jpg: 2015-09-29 02:44:58.000000000 +08:00
-images/dindin.png: 2016-05-19 03:08:21.000000000 +08:00
-images/site_fb_img.png: 2016-05-19 03:10:51.000000000 +08:00
+images/banner-large.jpg: 2017-03-02 12:21:52.571736880 +08:00
+images/banner-med.jpg: 2017-03-02 12:21:52.571736880 +08:00
+images/banner-small.jpg: 2017-03-02 12:21:52.571736880 +08:00
+images/banner-xl.jpg: 2017-03-02 12:21:52.571736880 +08:00
+images/banner-xl2.jpg: 2017-03-02 12:21:52.571736880 +08:00
+images/banner.jpg: 2017-03-02 12:21:52.575736880 +08:00
+images/dindin.png: 2017-03-02 12:25:07.875727947 +08:00
+images/site_fb_img.png: 2017-03-02 12:21:52.579736880 +08:00
+images/actula_price_screenshot_2.png: 2016-12-09 15:08:28.527859000 +08:00
+images/actula_price_screenshot_1.png: 2016-12-19 14:45:03.401244000 +08:00
+images/actual_price_screenshot_2.png: 2017-03-03 10:29:04.184684392 +08:00
+images/actual_price_screenshot_1.png: 2017-03-03 10:29:27.860683909 +08:00
+images/google-play-badge.png: 2017-03-03 10:43:10.628667130 +08:00
