1. move two posts to pages 2. add 'apps' in the nav bar

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -16,6 +16,9 @@
 - title: "Recruit"
   href: "/recruit/"
 
+- title: "Apps"
+  href: "/apps/"
+
 #- title: "External"
 #  external-subcategories:
 #    - subtitle: "Chih-Yu (Tomky) Wang"
